Changelog
=========


1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2012-08-13)
----------------

- Add installed upgrades to transaction note. Closes #7
  [jone]

- Add ``migrate_class`` helper with _p_changed implementation supporting BTreeFolder2Base containers.
  [jone]

- Remove ``purge_resource_registries()`` helper because it does not behave as expected.
  [jone]

- Set min-height of upgrade output frame to 500px.
  [jone]

- Print exceptions to browser log stream.
  [jone]


1.0b2 (2012-07-04)
------------------

- Fix the upgrade registration problem (using a classmethod does not work
  since registration fails).
  [jone]

- Let @@manage-upgrade be usable without actually installing the GS profile.
  [maethu]


1.0b1 (2012-06-27)
------------------

- First implementation.
  [jone]