@@ -5,7 +5,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Handle profiles of packages which were removed but have leftover generic setup entries.
+  [jone]
 
 
 1.0 (2012-08-13)
